# ECE408

./: .gitignore  CMakeLists.txt  CS483.mk  README.md  run_testcases.sh
MP0/: Makefile
MP1/: Makefile  template.cu
MP2/: Makefile  run_dataset  template.cu
MP2/data/10/: input1.raw  output.raw
MP3/: Makefile  template.cu
MP3/data/10/: input0.raw  input1.raw  output.raw
MP3/data/11/: input0.raw  input1.raw  output.raw
MP4/: Makefile  template.cu
MP5.1/: Makefile  template.cu
MP5.2/: Makefile  template.cu
MP6/: Makefile  actual.ppm  template  template.cu
MP7/: Makefile  template.cu
Project/: rai_build.yml
Project/custom/: cpu-new-forward.cc  new-forward.cu
libwb/mp1/: Makefile  mp1.cu  mp1_from_template.cu
